  * Multiarch related fixes:
    + Remove the Debian/Ubuntu specific path fix introduced in
      5.12.3-3 and obsoleted by the upstream fix in 5.14.0.
    + h2ph now correctly gets the header directories from gcc (Closes: #625808)
  * Revert obsolete patches:
    - debian/arm_optim.diff
    - debian/devel-ppport-ia64-optim.diff
    - fixes/processPL.diff (Closes: #626094) 

  [ Dominic Hargreaves ]
  * work around -Werror compile failure of XS in linux perf tool
    (Closes: #628512)
  * Note removal of perl-suid in README.Debian and suggest alternatives
    (Closes: #628042)
  * Add note about git format-patch signatures to git-dpm section of
    README.source
  * Update Vcs-* references to point to combined git-dpm based
    repository at new anonscm URLs
  * Split up patch debian/extutils_hacks.diff into several logically
    distinct patches (relates to: #624508)

 -- Dominic Hargreaves <dom@earth.li>  Sat, 04 Jun 2011 22:31:47 +0100

perl (5.14.0-1) experimental; urgency=low

  [ Niko Tyni ]
  * New upstream release candidate.
    + update the Breaks versions for most of the bundled modules.
    + no longer Breaks/Replaces/Provides libswitch-perl, libclass-isa-perl,
      and libpod-plainer-perl as the corresponding modules have been removed
      from the Perl core distribution.
    + add Breaks/Replaces/Provides for
      * libcpan-meta-perl
      * libmath-complex-perl
      * libextutils-command-perl
      * libmodule-metadata-perl
      * libjson-pp-perl
      * libperl-ostype-perl
      * libversion-requirements-perl
      * libcpan-meta-yaml-perl
      * libdigest-perl
      * libextutils-install-perl
      * libhttp-tiny-perl
  * debian/patches/fixes/extutils-cbuilder-cflags: [perl #89478]
    Make ExtUtils::CBuilder append CFLAGS and LDFLAGS from the environment
    to their Config.pm counterparts instead of overriding them. 
  * Totally rework debian/copyright.

  [ Dominic Hargreaves ]
  * New upstream release